# polyNext

./: Cargo.toml  Makefile  README.md
src/: main.rs  utils.rs
test_data/: smc.bam
